--- a/history.html
+++ b/history.html
@@ -72,34 +72,41 @@
                 </li>
                 <li class="line"></li>
                 <li class="station active-station"> <!-- History is active -->
-                    <a href="history.html" class="station-link" title="历史记录">
+                    <a href="history.html" class="station-link requires-login" title="历史记录">
                         <span class="station-icon"><i class="bi bi-clock-history"></i></span>
                         <span class="station-label">历史记录</span>
                     </a>
                 </li>
                 <li class="line"></li>
                 <li class="station">
-                    <a href="analysis.html" class="station-link" title="数据分析">
+                    <a href="analysis.html" class="station-link requires-login" title="数据分析">
                         <span class="station-icon"><i class="bi bi-bar-chart-line-fill"></i></span>
                         <span class="station-label">数据分析</span>
                     </a>
                 </li>
                 <li class="line"></li>
                 <li class="station">
-                    <a href="question-bank.html" class="station-link" title="题库管理">
+                    <a href="question-bank.html" class="station-link requires-login" title="题库管理">
                         <span class="station-icon"><i class="bi bi-archive"></i></span>
                         <span class="station-label">题库管理</span>
                     </a>
                 </li>
-                <!-- **** MODIFIED: User Auth Station **** -->
+                <!-- **** User Auth Section (Restored Style) **** -->
+                <!-- **** NEW User Auth Section **** -->
                 <li class="line"></li>
-                <li class="station user-auth-station" style="margin-left: auto;"> <!-- Keep push right -->
-                    <a href="#" id="authLink" class="station-link" title="用户状态"> <!-- Link for interaction -->
-                        <span class="station-icon" id="authIconContainer"><i id="authIcon" class="bi bi-person-circle"></i></span> <!-- User icon -->
-                        <span class="station-label" id="authLabel">登录</span> <!-- Label: Default '登录' -->
+                <li class="station user-auth-station logged-out-item" style="margin-left: auto;">
+                    <a href="#" id="loginButton" class="station-link" title="登录/注册">
+                        <span class="station-icon"><i class="bi bi-person-circle"></i></span>
+                        <span class="station-label">登录/注册</span>
                     </a>
                 </li>
-                <!-- **** END MODIFIED **** -->
+                <li class="station user-auth-station logged-in-item active-station" style="margin-left: auto; display: none;">
+                    <a id="userCenterLink" href="user_center.html" class="station-link" title="个人中心">
+                        <span class="station-icon"><i class="bi bi-person-check-fill"></i></span>
+                        <span class="station-label" id="loggedInUserLabel">个人中心</span>
+                    </a>
+                </li>
+                <!-- **** END NEW User Auth Section **** -->
             </ul>
         </nav>
         
@@ -183,8 +190,9 @@
 
             <!-- 操作按钮区域 -->
             <div class="d-grid gap-2 d-md-flex justify-content-md-end mt-4 mb-3">
-                <!-- 刷新云端记录按钮 -->
-                <button id="refreshCloudBtn" class="btn btn-primary btn-sm"><i class="bi bi-arrow-clockwise me-1"></i> 刷新云端记录</button>
+                <!-- **** 修改：按钮改为上传，并添加文件输入框 **** -->
+                <button id="uploadToCloudBtn" class="btn btn-primary btn-sm"><i class="bi bi-cloud-upload me-1"></i> 上传到云端</button>
+                <input type="file" id="jsonFileInput" accept=".json" style="display: none;">
                 <!-- 导出全部历史记录按钮 -->
                 <button id="exportHistoryBtn" class="btn btn-success btn-sm"><i class="bi bi-download me-1"></i> 导出全部记录(Excel)</button>
                 <!-- (可选) 添加一个用于处理本地未同步记录的按钮 -->
@@ -213,6 +221,57 @@
             </div>
         </div>
     </div>
+
+    <!-- **** MODIFIED: Combined Login/Register Modal **** -->
+    <div class="modal fade" id="loginModal" tabindex="-1" aria-labelledby="loginModalLabel" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="loginModalLabel">请登录</h5> <!-- Title changes based on view -->
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <!-- Error Alert -->
+                    <div class="alert alert-danger d-none" role="alert" id="authErrorAlert"></div>
+                    
+                    <!-- Login/Register Form -->
+                    <form id="authForm">
+                        <div class="mb-3">
+                            <label for="loginEmail" class="form-label">邮箱</label>
+                            <input type="email" class="form-control" id="loginEmail" required autocomplete="email">
+                        </div>
+                        <div class="mb-3">
+                            <label for="loginPassword" class="form-label">密码</label>
+                            <input type="password" class="form-control" id="loginPassword" required autocomplete="current-password">
+                        </div>
+                        <!-- **** 新增：忘记密码链接 **** -->
+                        <div class="text-end mb-3">
+                             <a href="#" id="forgotPasswordLink" class="small text-decoration-none">忘记密码？</a>
+                        </div>
+                        <!-- Registration Only Field -->
+                        <div class="mb-3 registration-field d-none"> 
+                            <label for="registerConfirmPassword" class="form-label">确认密码</label>
+                            <input type="password" class="form-control" id="registerConfirmPassword" required minlength="6" autocomplete="new-password">
+                        </div>
+                    </form>
+                </div>
+                <div class="modal-footer justify-content-between">
+                    <!-- Switch Links -->
+                    <div>
+                        <a href="#" id="switchToRegisterLink" class="small text-decoration-none">还没有账号？点击注册</a>
+                        <a href="#" id="switchToLoginLink" class="small text-decoration-none d-none">已有账号？返回登录</a>
+                    </div>
+                    <!-- Action Buttons -->
+                    <div>
+                         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">关闭</button>
+                         <button type="button" class="btn btn-primary login-button" id="loginSubmitButton">登录</button>
+                         <button type="button" class="btn btn-primary registration-button d-none" id="registerSubmitButton">注册</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- **** END MODIFIED: Combined Modal **** -->
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/xlsx@0.18.5/dist/xlsx.full.min.js"></script>
